VA-166 Use hook to determine if role filter panel is open, fix filter panel z-indexes, clean up some CSS

--- a/va-virkailija/web/va/hakemus-list/hakemus-listing.less
+++ b/va-virkailija/web/va/hakemus-list/hakemus-listing.less
@@ -36,10 +36,6 @@
         font-weight: bold;
         width: 120px;
       }
-
-      .person-filter-column {
-        width: 50px;
-      }
     }
   }
 }
@@ -159,6 +155,7 @@ table.hakemus-list {
   thead {
     th {
       white-space: nowrap;
+      z-index: 1000;
     }
   }
 
